--- a/app/src/pages/inside/logsPage/logToolbar/logToolbar.scss
+++ b/app/src/pages/inside/logsPage/logToolbar/logToolbar.scss
@@ -18,3 +18,40 @@
   display: inline-block;
   margin-right: -1px;
 }
+
+@media (min-width: 768px) {
+  .desktop-hidden {
+    display: none;
+  }
+
+  div[class^='logToolbar__action-button']:first-child {
+    padding-left: 53px;
+  }
+}
+@media (max-width: 767px) {
+  .mobile-hidden {
+    display: none;
+  }
+
+  .log-toolbar {
+    border-bottom: none;
+  }
+
+  div[class^='logToolbar__action-button']:first-child {
+    margin-left: auto;
+    margin-bottom: 12px;
+  }
+  div[class^='logToolbar__action-button']:last-child {
+    margin-right: 15px;
+  }
+}
+
+div[class^='logToolbar__action-button']:nth-child(2) {
+  padding-left: 0px;
+}
+
+@media (min-width: 954px) {
+  div[class^='logToolbar__action-button']:nth-child(2) {
+    padding-left: 5px;
+  }
+}
